Cinnamon - Soundplayer - fix distorted open and quit player icons

--- a/common/cinnamon/sass/_common.scss
+++ b/common/cinnamon/sass/_common.scss
@@ -1501,7 +1501,7 @@ StScrollBar {
 
     StButton:small {
       width: 16px;
-      height: 8px;
+      height: 16px;
       padding: 1px;
 
       StIcon { icon-size: 12px; }
